--- a/e_commerce.css
+++ b/e_commerce.css
@@ -251,6 +251,16 @@ ul {
 nav{
 	display: none;
 }
+.button_recherche{
+	height: 50px;
+	font-size: 20px;
+	width: 5em;
+	max-width: 20%;
+	margin-left: -5px;
+	padding: 10px;
+	border-radius: 0 20px 20px 0;
+	float: left;
+}
 }
 /*------------------------------------------- Fin Responsive-----------------------------------*/
 
