--- a/e_commerce.css
+++ b/e_commerce.css
@@ -252,14 +252,7 @@ nav{
 	display: none;
 }
 .button_recherche{
-	height: 30px;
-	font-size: 10px;
-	width: 5em;
-	max-width: 10%;
-	margin-left: -5px;
-	padding: 10px;
-	border-radius: 0 20px 20px 0;
-	float: left;
+	display: none;
 }
 }
 /*------------------------------------------- Fin Responsive-----------------------------------*/
