--- a/e_commerce.css
+++ b/e_commerce.css
@@ -254,6 +254,14 @@ nav{
 .button_recherche{
 	display: none;
 }
+input_recherche{
+	height: 40px;
+	font-size: 15px;
+	width: 20em;
+	max-width: 80%;
+	border-radius: 20px 0 0 20px;
+	padding: 10px 15px 10px 20px;
+	float: left;
 }
 /*------------------------------------------- Fin Responsive-----------------------------------*/
 
