--- a/e_commerce.css
+++ b/e_commerce.css
@@ -270,6 +270,11 @@ nav{
 	padding: 10px 15px 10px 20px;
 	float: left;
 }
+.onglet_mobile {
+	display : block;
+	}
+
+}
 /*------------------------------------------- Fin Responsive-----------------------------------*/
 
 /* ****************LOGIN**************** */
