--- a/e_commerce.css
+++ b/e_commerce.css
@@ -148,7 +148,7 @@ header p{
 }
 /* ****************les sections**************** */
 .sections{
-	display:flex;
+	display:block;
 	width: 100%;
 }
 .sect1{
