--- a/e_commerce.css
+++ b/e_commerce.css
@@ -259,7 +259,7 @@ nav{
 .button_recherche{
 	height: 40px;
 	font-size: 15px;
-	width: 5em;
+	width: 20%;
 	max-width: 20%;
 	margin-left: -5px;
 	padding: 10px;
@@ -269,7 +269,7 @@ nav{
 .input_recherche{
 	height: 40px;
 	font-size: 15px;
-	width: 20em;
+	width: 80%;
 	max-width: 80%;
 	border-radius: 20px 0 0 20px;
 	padding: 10px 15px 10px 20px;
