--- a/e_commerce.css
+++ b/e_commerce.css
@@ -280,7 +280,7 @@ nav{
 	}
 header h1{
 	color: white;
-	font-size: 100%;
+	font-size: 1.2em;
 	text-align: center;
 	margin-top: -30px;
 	max-width: 100%;
