--- a/e_commerce.css
+++ b/e_commerce.css
@@ -247,6 +247,12 @@ footer h2{font-size: 25px;}
 ul {
 	display: none;
 }	
+header p{
+	color: yellow;
+	font-size:  200%;
+	text-align: center;
+	padding: 0 0;
+}
 nav{
 	display: none;
 }
