--- a/e_commerce.css
+++ b/e_commerce.css
@@ -63,6 +63,11 @@ a{text-decoration: none;}
   top: 0; 
   z-index: 1;
 }
+.onglet_mobile{
+	height: 80%;
+	background-color: gray;
+	widht: 200px;
+}
 .marque{
 	display: none;
 }
