--- a/e_commerce.css
+++ b/e_commerce.css
@@ -66,7 +66,11 @@ a{text-decoration: none;}
 .onglet_mobile{
 	height: 80%;
 	background-color: gray;
-	widht: 200px;
+	width: 200px;
+}
+nav ul li{
+	list-style: none;
+
 }
 .marque{
 	display: none;
