--- a/e_commerce.css
+++ b/e_commerce.css
@@ -70,7 +70,9 @@ a{text-decoration: none;}
 }
 nav ul li{
 	list-style: none;
-
+	margin: 10px;
+	text-align: center;
+	display: block;
 }
 .marque{
 	display: none;
