--- a/e_commerce.css
+++ b/e_commerce.css
@@ -67,6 +67,10 @@ a{text-decoration: none;}
 	height: 80%;
 	background-color: gray;
 	width: 200px;
+	position: fixed;
+	z-index: 3;
+	display: flex;
+	flex-direction: column;
 }
 nav ul li{
 	list-style: none;
