--- a/e_commerce.css
+++ b/e_commerce.css
@@ -105,6 +105,15 @@ nav ul li .marque .lis li a{
 	background-color: rgb(255 255 255);
 	}
 nav ul li .marque .lis li a:hover{background-color: gray;color: black;}
+.toggle_btn{
+	height: 30px;
+	width: 30px;
+	position: relative;
+	float: right;
+	margin-right: 10px;
+	margin-top: 5px;
+	cursor: pointer;
+}
 
 /* ****************Image_acceuil**************** */
 header{
