--- a/e_commerce.css
+++ b/e_commerce.css
@@ -114,6 +114,32 @@ nav ul li .marque .lis li a:hover{background-color: gray;color: black;}
 	margin-top: 5px;
 	cursor: pointer;
 }
+.toggle_btn span{
+	height: 3px;
+	background-color: #2c3e50;
+	width: 100%;
+	position: absolute;
+	top: 20px;
+	left: 0;
+}
+.toggle_btn span:before{
+	content: '';
+	height: 3px;
+	background-color: #2c3e50;
+	width: 100%;
+	position: absolute;
+	top: -10px;
+	left: 0;
+}
+.toggle_btn span:after{
+	content: '';
+	height: 3px;
+	background-color: #2c3e50;
+	width: 100%;
+	position: absolute;
+	top: 10px;
+	left: 0;
+}
 
 /* ****************Image_acceuil**************** */
 header{
